--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timeweb-next-test",
+  "name": "timeweb-next-static-smoke",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "next": "14.2.25",
-    "react": "^19",
-    "react-dom": "^19"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
