--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timeweb-next-static-smoke",
+  "name": "timeweb-next-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "next": "14.2.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^19",
+    "react-dom": "^19"
+  },
+  "engines": {
+    "node": ">=18 <23"
   }
 }
