--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.25",
-    "react": "^19",
-    "react-dom": "^19"
+  "next": "14.2.25",
+  "react": "18.2.0",
+  "react-dom": "18.2.0"
   },
   "engines": {
-    "node": ">=18 <23"
+    "node": ">=18"
   }
 }
