--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",      // только build
     "start": "next start"
   },
   "dependencies": {
-  "next": "14.2.25",
-  "react": "18.2.0",
-  "react-dom": "18.2.0"
-  },
-  "engines": {
-    "node": ">=18"
+    "next": "14.2.25",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
